--- a/src/styles/components/_weather_card.scss
+++ b/src/styles/components/_weather_card.scss
@@ -1,5 +1,7 @@
 @import '../lib/bourbon/bourbon';
 
+// TODO: in my messing around this got way out of hand. REFACTOR.
+
 // Weather Icons //
 @mixin weather-icon($icon-name) {
   background: url("../img/weather-icons/#{$icon-name}.png") left no-repeat;
@@ -20,21 +22,41 @@
 }
 
 // Weather Card Settings //
-$curcondition-size: 48px;
+$curcondition-size: 42px;
 $futurecondition-size: 22px;
 $temp-color: #333;
+
+$small-section-ratio: 28.75%;
+$large-section-ratio: 42%;
+
+// A word on how these are laid out:
+// It's a huge hassle getting these things to center vertically at larger sizes
+// so, knowing that the icon size & text size will not change I can make the
+// content divs be pixel perfect and then have their containers achieve the
+// desired ratio. Not the best way but it works.
 
 .weather-card {
   @include user-select(none);
   cursor: default;
-  // See this for distributing contents evenly (vertically)
-  // http://stackoverflow.com/questions/6865194/fluid-width-with-equally-spaced-divs/6880421#6880421
 
-  // height: 100%;
-  // width: 100%;
+  $card-vert-padding: 5px;
+  height: 100%;
+  padding: $card-vert-padding 0;
+  min-height: $min-widget-height - 2*($card-vert-padding);
+
+  .city-container, .future-container {
+    @include row();
+    height: $small-section-ratio;
+  }
+
+  .current-container {
+    @include row();
+    height: $large-section-ratio;
+  }
 }
 
 .weather-card .city {
+  @include center-vertically();
   color: $font-color-dark;
   font-family: $Raleway;
   font-size: modular-scale(4);
@@ -44,39 +66,48 @@ $temp-color: #333;
 
 .weather-card .weather-current {
   @include clearfix;
+  @include center-vertically();
 
   width: 100%;
-  height: 20%;
+  height: 48px;
+  text-align: center;
 
-  margin-top: -3%;
+  & .condition, & .temp {
+    height: 100%;
+  }
 
   .condition {
     float: left;
-
-    height: $curcondition-size;
     width: $curcondition-size;
-
-    margin-top: 4px;
+    height: 100%;
     margin-left: 10%;
+    background-size: contain;
   }
 
   .temp {
     float: right;
+    margin-right: 5px;
 
     color: rgba($temp-color, .75);
     font-family: $Montserrat;
     font-size: modular-scale(5);
     font-weight: $font-normal;
-
-    margin-right: 5px;
   }
 }
 
 .weather-card .weather-future {
   @include clearfix;
+  @include center-vertically();
 
   width: 100%;
-  margin-top: 3%;
+  height: 33px;
+  padding-bottom: 2px;
+
+
+  & span, & .temp {
+    height: 100%;
+    vertical-align: sub;
+  }
 
   .time-of-day {
     float: left;
@@ -86,7 +117,6 @@ $temp-color: #333;
     font-size: modular-scale(2);
     font-weight: $font-normal;
 
-    margin-top: 2.5%;
     margin-left: 10px;
   }
 
@@ -97,18 +127,16 @@ $temp-color: #333;
 
   .condition {
     float: right;
-
-    margin-top: 2.5%;
-    margin-right: 2%;
+    margin-right: 4%;
+    margin-top: 3px;
 
     width: $futurecondition-size;
-    height: $futurecondition-size;
+    height: 100%;
+    background-size: contain;
   }
 
   .temp {
     float: right;
-
-    margin-top: 6px;
     margin-right: 10px;
 
     color: rgba($temp-color, .5);
